# Titan-Protocol

./: .env.example  .python-version  pyproject.toml
src/: config.py  main.py
src/agents/: base.py  bear.py  bull.py  judge.py  librarian.py
src/core/: llm.py
src/stages/: construction.py  discovery.py  judgment.py  triage.py
src/tools/: finance.py  search.py
tests/: test_deep_research.py  test_grasim.py
